fix: spacing in quickview items

--- a/src/client/containers/Quickview/style.scss
+++ b/src/client/containers/Quickview/style.scss
@@ -263,6 +263,8 @@
         }
 
         .assetContainer {
+          display: flex;
+
           [class*='AssetLayer-style__container'] {
             height: 0;
           }
@@ -286,7 +288,7 @@
         }
 
         .items {
-          padding: 40px 0px 0px;
+          padding: 0;
 
           .itemWrapper {
             // padding: 72px 0px;
@@ -311,8 +313,7 @@
 
           .infoItem {
             width: 100%;
-            height: 250px;
-            padding: 72px 0px 72px;
+            padding: 72px 0px;
             display: flex;
             flex-direction: column;
             align-items: center;
